# OpenGLES2-OpenSLES2ForAndroid

./: .gitignore  README.md
BlurView/: settings.gradle
BlurView/app/: build.gradle
BlurView/app/src/androidTest/java/com/jesson/blurview/: ExampleInstrumentedTest.java
BlurView/app/src/main/: AndroidManifest.xml
BlurView/app/src/main/java/com/jesson/blurview/: MainActivity.java
BlurView/app/src/main/res/layout/: activity_main.xml
BlurView/app/src/test/java/com/jesson/blurview/: ExampleUnitTest.java
BlurView/blurviewlib/: build.gradle
BlurView/blurviewlib/src/main/: AndroidManifest.xml
BlurView/blurviewlib/src/main/cpp/: CMakeLists.txt  blur.cpp  blur.h  native-lib.cpp
BlurView/blurviewlib/src/main/java/com/jesson/blurviewlib/: BlurUtil.java
BlurView/blurviewlib/src/main/res/values/: strings.xml
BlurView/gradle/wrapper/: gradle-wrapper.properties
CameraView/: README.md  build.gradle
CameraView/demo/: build.gradle
CameraView/demo/src/main/: AndroidManifest.xml
CameraView/demo/src/main/res/layout/: activity_main.xml  dialog_picture.xml
CameraView/gradle/wrapper/: gradle-wrapper.properties
DouYin/app/: build.gradle
DouYin/app/src/main/: AndroidManifest.xml
DouYin/app/src/main/cpp/: native-lib.cpp
DouYin/app/src/main/res/layout/: activity_main.xml
DouYin/app/src/main/res/raw/: camera_vertex.vert
DouYin/gradle/wrapper/: gradle-wrapper.properties
FangDouYin/app/: build.gradle
FangDouYin/app/src/main/: AndroidManifest.xml
FangDouYin/app/src/main/assets/shader/: base_fragment.sh
FangDouYin/app/src/main/cpp/: native-lib.cpp
FangDouYin/app/src/main/res/layout/: activity_main.xml  activity_recorde.xml
FangDouYin/app/src/main/res/values/: strings.xml  styles.xml
JpegCompressNDK/app/: build.gradle
JpegCompressNDK/app/src/main/: AndroidManifest.xml
JpegCompressNDK/app/src/main/cpp/: CMakeLists.txt
JpegCompressNDK/app/src/main/cpp/libjpeg-turbo/: native-lib.cpp
JpegCompressNDK/app/src/main/res/values/: strings.xml
JpegCompressNDK/gradle/wrapper/: gradle-wrapper.properties
MeiTuanInterfacePwd/app/: build.gradle
MeiTuanInterfacePwd/app/src/main/: AndroidManifest.xml
MeiTuanInterfacePwd/app/src/main/cpp/: CMakeLists.txt  md5.cpp  md5.h  native-lib.cpp
MeiTuanInterfacePwd/app/src/main/res/layout/: activity_main.xml
MeiTuanInterfacePwd/app/src/main/res/values/: strings.xml
MeiTuanInterfacePwd/gradle/wrapper/: gradle-wrapper.properties
MemorySharing/: readme.md
PhotoBase64/app/: build.gradle
PhotoBase64/app/src/main/: AndroidManifest.xml
PhotoBase64/app/src/main/cpp/: CMakeLists.txt  base64.cpp  base64.h  native-lib.cpp
PhotoBase64/app/src/main/res/layout/: activity_main.xml
PhotoBase64/app/src/main/res/values/: strings.xml
PhotoBase64/gradle/wrapper/: gradle-wrapper.properties
VideoCompression/: readme.md
VideoCompression/app/: CMakeLists.txt
VideoCompression/app/src/main/cpp/: native-lib.cpp
VideoCompression/app/src/main/java/com/jesson/videocompression/: VideoCompression.java
jni/app/: build.gradle
jni/app/src/main/: AndroidManifest.xml
jni/app/src/main/cpp/: native-lib.cpp
jni/app/src/main/res/layout/: activity_main.xml
jni/app/src/main/res/values/: strings.xml
jni/gradle/wrapper/: gradle-wrapper.properties
opengl_hello/: .gitignore  README.md
opengl_hello/app/: build.gradle
opengl_hello/app/src/main/: AndroidManifest.xml
opengl_hello/app/src/main/cpp/: native-lib.cpp
opengl_hello/app/src/main/res/layout/: activity_main.xml
opengl_hello/app/src/main/res/raw/: fragment_shader.glsl
opensl_project/app/: CMakeLists.txt  build.gradle
opensl_project/app/src/main/: AndroidManifest.xml
opensl_project/app/src/main/cpp/: AudioQueue.cpp  AudioQueue.h  audio_pcm.cpp  audio_pcm.h  native-lib.cpp
opensl_project/app/src/main/res/layout/: activity_main.xml
opensl_project/app/src/main/res/values/: strings.xml
openssl/app/: CMakeLists.txt  build.gradle
openssl/app/libs/armeabi-v7a/: libcrypto.so.1.1  libssl.so.1.1
openssl/app/openssl-armeabi-v7a/include/openssl/: engine.h  opensslconf.h  opensslv.h
openssl/app/src/main/: AndroidManifest.xml
openssl/app/src/main/cpp/: native-lib.cpp
openssl/app/src/main/res/values/: strings.xml
(+103 files in other folders)
